@@ -1,5 +1,7 @@
 
 3.73  2013-01-06
+  - Deprecated Mojolicious::Commands->start in favor of
+    Mojolicious::Commands->start_app.
   - Improved name detection in Mojolicious::Plugin::Config.
 
 3.72  2013-01-05
